src/test/ui/macros/macro-attribute.stderr
error: expected `]`, found `not_there`
  --> $DIR/macro-attribute.rs:3:10
   |
LL | #[doc = $not_there] //~ ERROR expected `]`, found `not_there`
   |          ^^^^^^^^^ expected `]`

error: aborting due to previous error

